Compilerbau/2024-06-19/lang/LangParser.py
# Generated from Lang.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LangParser ( Parser ):

    grammarFileName = "Lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'!'", "'-'", "'+'", "'*'", "'/'", "'%'", 
                     "'**'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'&&'", "'||'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'break'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'while'", "'let'", "'loop'", "'if'", 
                     "'else'", "'{'", "'}'", "'('", "')'", "';'", "','", 
                     "':'", "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Comment", "INTEGER", "FLOAT", 
                      "STRING", "BOOLEAN", "WHILE", "LET", "LOOP", "IF", 
                      "ELSE", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "SEMICOLON", 
                      "COMMA", "COLON", "WS", "EQUAL", "IDENTIFIER_LOWERCASE_START", 
                      "IDENTIFIER_CAPITAL_START" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_comment = 2
    RULE_let_statement = 3
    RULE_expression = 4
    RULE_expression_statement = 5
    RULE_expression_with_block = 6
    RULE_expression_without_block = 7
    RULE_block_expression = 8
    RULE_loop_expression = 9
    RULE_while_expression = 10
    RULE_if_expression = 11
    RULE_literal_expression = 12
    RULE_variable_expression = 13
    RULE_function_call_expression = 14
    RULE_negation_expression = 15
    RULE_grouped_expression = 16
    RULE_math_operator = 17
    RULE_comparison_operator = 18
    RULE_logical_operator = 19
    RULE_assignment_operator = 20
    RULE_break_expression = 21
    RULE_type = 22

    ruleNames =  [ "program", "statement", "comment", "let_statement", "expression", 
                   "expression_statement", "expression_with_block", "expression_without_block", 
                   "block_expression", "loop_expression", "while_expression", 
                   "if_expression", "literal_expression", "variable_expression", 
                   "function_call_expression", "negation_expression", "grouped_expression", 
                   "math_operator", "comparison_operator", "logical_operator", 
                   "assignment_operator", "break_expression", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    Comment=22
    INTEGER=23
    FLOAT=24
    STRING=25
    BOOLEAN=26
    WHILE=27
    LET=28
    LOOP=29
    IF=30
    ELSE=31
    LBRACE=32
    RBRACE=33
    LPAREN=34
    RPAREN=35
    SEMICOLON=36
    COMMA=37
    COLON=38
    WS=39
    EQUAL=40
    IDENTIFIER_LOWERCASE_START=41
    IDENTIFIER_CAPITAL_START=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.StatementContext)
            else:
                return self.getTypedRuleContext(LangParser.StatementContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2222643478534) != 0):
                self.state = 46
                self.statement()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(LangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def let_statement(self):
            return self.getTypedRuleContext(LangParser.Let_statementContext,0)


        def expression_statement(self):
            return self.getTypedRuleContext(LangParser.Expression_statementContext,0)


        def comment(self):
            return self.getTypedRuleContext(LangParser.CommentContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.let_statement()
                pass
            elif token in [1, 2, 21, 23, 24, 25, 26, 27, 29, 30, 32, 34, 41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.expression_statement()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Comment(self):
            return self.getToken(LangParser.Comment, 0)

        def getRuleIndex(self):
            return LangParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = LangParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(LangParser.Comment)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Let_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(LangParser.LET, 0)

        def IDENTIFIER_LOWERCASE_START(self):
            return self.getToken(LangParser.IDENTIFIER_LOWERCASE_START, 0)

        def COLON(self):
            return self.getToken(LangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(LangParser.TypeContext,0)


        def EQUAL(self):
            return self.getToken(LangParser.EQUAL, 0)

        def expression_without_block(self):
            return self.getTypedRuleContext(LangParser.Expression_without_blockContext,0)


        def SEMICOLON(self):
            return self.getToken(LangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return LangParser.RULE_let_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet_statement" ):
                listener.enterLet_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet_statement" ):
                listener.exitLet_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet_statement" ):
                return visitor.visitLet_statement(self)
            else:
                return visitor.visitChildren(self)




    def let_statement(self):

        localctx = LangParser.Let_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_let_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(LangParser.LET)
            self.state = 62
            self.match(LangParser.IDENTIFIER_LOWERCASE_START)
            self.state = 63
            self.match(LangParser.COLON)
            self.state = 64
            self.type_()
            self.state = 65
            self.match(LangParser.EQUAL)
            self.state = 66
            self.expression_without_block(0)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 67
                self.match(LangParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_with_block(self):
            return self.getTypedRuleContext(LangParser.Expression_with_blockContext,0)


        def expression_without_block(self):
            return self.getTypedRuleContext(LangParser.Expression_without_blockContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = LangParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27, 29, 30, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.expression_with_block()
                pass
            elif token in [1, 2, 21, 23, 24, 25, 26, 34, 41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.expression_without_block(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_without_block(self):
            return self.getTypedRuleContext(LangParser.Expression_without_blockContext,0)


        def SEMICOLON(self):
            return self.getToken(LangParser.SEMICOLON, 0)

        def expression_with_block(self):
            return self.getTypedRuleContext(LangParser.Expression_with_blockContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_expression_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_statement" ):
                listener.enterExpression_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_statement" ):
                listener.exitExpression_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_statement" ):
                return visitor.visitExpression_statement(self)
            else:
                return visitor.visitChildren(self)




    def expression_statement(self):

        localctx = LangParser.Expression_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression_statement)
        self._la = 0 # Token type
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 21, 23, 24, 25, 26, 34, 41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.expression_without_block(0)
                self.state = 75
                self.match(LangParser.SEMICOLON)
                pass
            elif token in [27, 29, 30, 32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.expression_with_block()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==36:
                    self.state = 78
                    self.match(LangParser.SEMICOLON)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_with_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_expression(self):
            return self.getTypedRuleContext(LangParser.Block_expressionContext,0)


        def loop_expression(self):
            return self.getTypedRuleContext(LangParser.Loop_expressionContext,0)


        def while_expression(self):
            return self.getTypedRuleContext(LangParser.While_expressionContext,0)


        def if_expression(self):
            return self.getTypedRuleContext(LangParser.If_expressionContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_expression_with_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_with_block" ):
                listener.enterExpression_with_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_with_block" ):
                listener.exitExpression_with_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_with_block" ):
                return visitor.visitExpression_with_block(self)
            else:
                return visitor.visitChildren(self)




    def expression_with_block(self):

        localctx = LangParser.Expression_with_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expression_with_block)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.block_expression()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.loop_expression()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.while_expression()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.if_expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_without_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal_expression(self):
            return self.getTypedRuleContext(LangParser.Literal_expressionContext,0)


        def variable_expression(self):
            return self.getTypedRuleContext(LangParser.Variable_expressionContext,0)


        def function_call_expression(self):
            return self.getTypedRuleContext(LangParser.Function_call_expressionContext,0)


        def negation_expression(self):
            return self.getTypedRuleContext(LangParser.Negation_expressionContext,0)


        def grouped_expression(self):
            return self.getTypedRuleContext(LangParser.Grouped_expressionContext,0)


        def break_expression(self):
            return self.getTypedRuleContext(LangParser.Break_expressionContext,0)


        def assignment_operator(self):
            return self.getTypedRuleContext(LangParser.Assignment_operatorContext,0)


        def expression_without_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.Expression_without_blockContext)
            else:
                return self.getTypedRuleContext(LangParser.Expression_without_blockContext,i)


        def math_operator(self):
            return self.getTypedRuleContext(LangParser.Math_operatorContext,0)


        def comparison_operator(self):
            return self.getTypedRuleContext(LangParser.Comparison_operatorContext,0)


        def logical_operator(self):
            return self.getTypedRuleContext(LangParser.Logical_operatorContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_expression_without_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_without_block" ):
                listener.enterExpression_without_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_without_block" ):
                listener.exitExpression_without_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_without_block" ):
                return visitor.visitExpression_without_block(self)
            else:
                return visitor.visitChildren(self)



    def expression_without_block(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LangParser.Expression_without_blockContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expression_without_block, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 90
                self.literal_expression()
                pass

            elif la_ == 2:
                self.state = 91
                self.variable_expression()
                pass

            elif la_ == 3:
                self.state = 92
                self.function_call_expression()
                pass

            elif la_ == 4:
                self.state = 93
                self.negation_expression()
                pass

            elif la_ == 5:
                self.state = 94
                self.grouped_expression()
                pass

            elif la_ == 6:
                self.state = 95
                self.break_expression()
                pass

            elif la_ == 7:
                self.state = 96
                self.variable_expression()
                self.state = 97
                self.assignment_operator()
                self.state = 98
                self.expression_without_block(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = LangParser.Expression_without_blockContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_without_block)
                        self.state = 102
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 103
                        self.math_operator()
                        self.state = 104
                        self.expression_without_block(5)
                        pass

                    elif la_ == 2:
                        localctx = LangParser.Expression_without_blockContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_without_block)
                        self.state = 106
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 107
                        self.comparison_operator()
                        self.state = 108
                        self.expression_without_block(4)
                        pass

                    elif la_ == 3:
                        localctx = LangParser.Expression_without_blockContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_without_block)
                        self.state = 110
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 111
                        self.logical_operator()
                        self.state = 112
                        self.expression_without_block(3)
                        pass

             
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Block_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(LangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LangParser.RBRACE, 0)

        def expression_without_block(self):
            return self.getTypedRuleContext(LangParser.Expression_without_blockContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.StatementContext)
            else:
                return self.getTypedRuleContext(LangParser.StatementContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_block_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_expression" ):
                listener.enterBlock_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_expression" ):
                listener.exitBlock_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_expression" ):
                return visitor.visitBlock_expression(self)
            else:
                return visitor.visitChildren(self)




    def block_expression(self):

        localctx = LangParser.Block_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(LangParser.LBRACE)
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 120
                    self.statement()
                    self.state = 123 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2222643478534) != 0)):
                        break

                pass

            elif la_ == 2:
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 125
                        self.statement() 
                    self.state = 130
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                self.state = 131
                self.expression_without_block(0)
                pass


            self.state = 134
            self.match(LangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP(self):
            return self.getToken(LangParser.LOOP, 0)

        def block_expression(self):
            return self.getTypedRuleContext(LangParser.Block_expressionContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_loop_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_expression" ):
                listener.enterLoop_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_expression" ):
                listener.exitLoop_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_expression" ):
                return visitor.visitLoop_expression(self)
            else:
                return visitor.visitChildren(self)




    def loop_expression(self):

        localctx = LangParser.Loop_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loop_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(LangParser.LOOP)
            self.state = 137
            self.block_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(LangParser.WHILE, 0)

        def expression_without_block(self):
            return self.getTypedRuleContext(LangParser.Expression_without_blockContext,0)


        def block_expression(self):
            return self.getTypedRuleContext(LangParser.Block_expressionContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_while_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_expression" ):
                listener.enterWhile_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_expression" ):
                listener.exitWhile_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_expression" ):
                return visitor.visitWhile_expression(self)
            else:
                return visitor.visitChildren(self)




    def while_expression(self):

        localctx = LangParser.While_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(LangParser.WHILE)
            self.state = 140
            self.expression_without_block(0)
            self.state = 141
            self.block_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LangParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(LangParser.ExpressionContext,0)


        def block_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.Block_expressionContext)
            else:
                return self.getTypedRuleContext(LangParser.Block_expressionContext,i)


        def ELSE(self):
            return self.getToken(LangParser.ELSE, 0)

        def getRuleIndex(self):
            return LangParser.RULE_if_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_expression" ):
                listener.enterIf_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_expression" ):
                listener.exitIf_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_expression" ):
                return visitor.visitIf_expression(self)
            else:
                return visitor.visitChildren(self)




    def if_expression(self):

        localctx = LangParser.If_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(LangParser.IF)
            self.state = 144
            self.expression()
            self.state = 145
            self.block_expression()
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 146
                self.match(LangParser.ELSE)
                self.state = 147
                self.block_expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(LangParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(LangParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(LangParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(LangParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return LangParser.RULE_literal_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral_expression" ):
                listener.enterLiteral_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral_expression" ):
                listener.exitLiteral_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral_expression" ):
                return visitor.visitLiteral_expression(self)
            else:
                return visitor.visitChildren(self)




    def literal_expression(self):
